tests/scan/fixtures/validation/negative/clean_go_clean-db-accessor/clean-db-accessor.go
// Package clean-db-accessor is a clean Go module.
package clean-db-accessor

func Hello() string { return "hello" }
